--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Sir Tim Berners-Lee</title>
+	<title>Tim Berners-Lee</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 
@@ -9,25 +9,25 @@
 	<section id="welcome" class="parallax-container">
 		<div class="parallax-inner">
 			<img src="stbl.jpg" class="profile" />
-			<h1>I Am <br><span id="name">Tim Berners-Lee</span></h1>
-			<h2> I am the founder of www: World Wide Web</h2>
+			<h1>Soy <br><span id="name">Tim Berners-Lee</span></h1>
+			<h2> Soy el fundador de la World Wide Web</h2>
 		</div>
 	</section>
 	
 	
 	
 	<section id="bio">
-		<h1>Hi!</h1>
+		<h1>¡Hola!</h1>
 		<div class="line"></div>
-		<p>Tim Berners-Lee is a software engineer who invented the Internet (or the World Wide Web) in 1989 while at CERN, the European Particle Physics Laboratory.
+		<p>Tim Berners-Lee es un ingeniero de software que inventó Internet (o la World Wide Web) en 1989 mientras trabajaba en el CERN, el Laboratorio Europeo de Física de Partículas.
 
-			He is director of the World Wide Web Consortium that he founded and a Professor in the Computer Science Department at the University of Oxford.
+			Es director del Consorcio de la World Wide Web que él mismo fundó y profesor del Departamento de Informática de la Universidad de Oxford.
 
-			In 2001 he became a Fellow of the Royal Society and in 2004 he was knighted.<br/><br/>In 1994 Berners-Lee founded the World Wide Web Consortium (W3C) at the Laboratory of Computer Science (LCS) at the Massachusetts Institute of Technology in Boston. It was made up of companies that wanted to work together to create Web standards and also improve the Web. It was quickly agreed that the technology should be free of royalties and patents. Berners-Lee has served as director of this W3C since it was founded.
+			En 2001 fue nombrado miembro de la Royal Society y en 2004 fue nombrado caballero.<br/><br/>En 1994 Berners-Lee fundó el Consorcio de la World Wide Web (W3C) en el Laboratorio de Ciencias de la Computación (LCS) del Instituto Tecnológico de Massachusetts en Boston. Estaba formado por empresas que querían trabajar juntas para crear estándares web y también mejorar la web. Rápidamente se acordó que la tecnología debía estar libre de derechos y patentes. Berners-Lee ha sido director de este W3C desde su fundación.
 
-			In 1995 Microsoft produced the first version of Internet Explorer and this commercial browser created enormous growth in websites and web users.
+			En 1995 Microsoft produjo la primera versión de Internet Explorer y este navegador comercial creó un enorme crecimiento de sitios web y usuarios de la web.
 
-			The Web was first used for e-commerce in 1997.</p>
+			La Web se utilizó por primera vez para el comercio electrónico en 1997.</p>
 	</section>
 
 </body></html>
